fix whitespace near node ko button.

--- a/static/index.css
+++ b/static/index.css
@@ -99,6 +99,8 @@ rgb(40,235,60);
 #nko_button_sneaky {
   text-align: center;
   margin-bottom: 20px;
+  height: 25px;
+  overflow: hidden;
 }
 #footer {
   height: 110px;
@@ -141,7 +143,7 @@ rgb(40,235,60);
   border-style: 'solid';
   border-radius: 10px;
 }
-iframe {
+iframe.heatmap {
   border: 0px;
   background-color: rgb(230,230,230);
   margin-left: 30px;
